tests/fixtures/valid/expressions/history_reference.pine
//@version=6
indicator("History")
prev = close[1]
plot(prev)
