tests/fixtures/invalid/semantic/repeated_history_reference.pine
//@version=6
indicator("x")
x = close[1][2]
